--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = raspberrypi
 board = seeed_xiao_rp2040
 framework = arduino
-lib_deps = mathertel/OneButton@^2.6.1
+lib_deps = 
+	mathertel/OneButton@^2.6.1
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
